# lidar-simulation

./: .gitignore  LICENSE  README.md  TestGenerator.sh  dataGenJason.sh  fromImage.py  lens.py  negativeTestGen.sh  pixelation.py  positiveTestGen.sh  requirements.txt  scenGen.py  setUp.sh  singleTestGen.sh  time_stamped_histogram.py
ADS_calibration/: ADS_calibration.json
ADS_calibration/camera/: static_camera_1.json  static_camera_2.json  static_camera_3.json  static_camera_4.json  static_camera_5.json  static_camera_6.json
ADS_calibration/model/: material.mtl
Model/: cornell_box.mtl  v1.mtl
genScene/: .gitignore  material.mtl  requirements.txt  scenGen.py
pythonLib/: formImageLib.py  lenLib.py  scenGenLib.py
pythonScripts/: dead_time_simulation.ipynb  fromImage.py  generateCamera.py  imageShow.ipynb  postProcessing.py  removeSmallBox.py  requirements.txt  scenGen.py  static_scene.py
pythonScripts/pythonLib/: formImageLib.py  pixelationLib.py  postProcessLib.py  scenGenLib.py
rustLib/: Cargo.toml
rustLib/src/: pixelation.rs  pixelationCLI.rs  pixlelationLib.rs
syclImplementation/: CMakeLists.txt  Test.cpp  configure.sh  run.sh
syclImplementation/include/: BVHArray.hpp  Bounds3.hpp  Camera.hpp  DiffuseMaterial.hpp  FileProcessor.hpp  Geometry.hpp  Intersection.hpp  Material.hpp  ObjectList.hpp  Ray.hpp  Triangle.hpp  TypeDefine.hpp  Utility.hpp  Vec.hpp  common.hpp  syclScene.hpp  sycl_obj_loader.hpp
